--- a/app/src/main/res/layout/item_coin_info.xml
+++ b/app/src/main/res/layout/item_coin_info.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/ivLogoCoin"
+            android:id="@+id/ivLogoCoinDetails"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_margin="8dp"
@@ -34,7 +34,7 @@
             tools:text="BTC / USD" />
 
         <TextView
-            android:id="@+id/tvPrice"
+            android:id="@+id/tvPriceDetail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
@@ -51,7 +51,7 @@
             android:layout_height="wrap_content"
             android:padding="4dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvPrice"
+            app:layout_constraintTop_toBottomOf="@+id/tvPriceDetail"
             tools:text="Время последнего обновления: 21:46:21" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
